# tm_solutions

./: .env  .gitignore  README.md  docker-compose.airflow.yml  docker-compose.metabase.yml  pyproject.toml  reload_airflow.bat  reload_requirements.bat
.output/: TMDS-report.pptx
.output/02_count_missing/: distribution_centers.csv  events.csv  inventory_items.csv  order_items.csv  orders.csv  products.csv  users.csv
dags/: 00_dags.py  01_extract.py  02_exploration.py  03_correlation.py  config.py  dags.py  dataset.py  explore_dataset.py  extract.py
dags/env/: .env  golden-ego-396703-9dbf90079b0f.json  golden-ego-396703-bd4ff372b735.json
data/: sample.csv
db/: airflow.db
docker/: Dockerfile  Dockerfile.airflow  requirements.txt
logs/scheduler/: latest
src/: .env  01_Extraction.py  config.py  dataset.py  main.py
