[tool.poetry]
name = "tm-solutions"
version = "0.1.0"
description = ""
authors = ["Maverick Wong <mvrck.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pyspark = "^3.5.0"
google-cloud-bigquery = "^3.17.2"
seaborn = "^0.13.2"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
